--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,25 @@ section {
     border-radius: 1rem;
 }
 
+footer{
+    background-color: var(--clr-card);
+    transition: var(--transition);
+    font: var(--ts-normal-semibold);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 19rem;
+    text-align: center;
+}
+
+a{
+    color: var(--clr-link);
+    transition: var(--transition);
+    text-decoration: none;
+
+}
+
+
 /* 2. Navbar */
 
 .navbar {
@@ -256,10 +275,27 @@ section {
     transition: var(--transition);
 }
 
+/**********************************/
 /* 7. Data Box
+/**********************************/
+
+.data-box__header{
+    font: var(--ts-caption);
+    text-transform: uppercase;
+    margin-bottom:1.6rem;
+}
+
+.data-box__description{
+    font: var(--ts-normal-text);
+}
+
+/**********************************/
 /* 8. Footer
 /**********************************/
 
+.footer-text__source{
+    margin-bottom: 3.2rem;
+}
 
 /**********************************/
 /* 3. Loading
